--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,20 @@
   box-sizing: border-box;
 
 }
+.text{
+  text-align: justify;
+  font-size: 20px;
+  font-weight: 300;
+  font-family: 'Open Sans', sans-serif;
+}
 .name {
-  text-align: inherit;
+  /*display: inline;*/
+  text-align: justify;
   font-family: 'Open Sans', sans-serif;
   margin-bottom: 5px;
 }
 .num {
-  display: inline-block;
+  display: inline;
   vertical-align:top;
   margin-top: 5px;
   margin-bottom: 5px;
@@ -21,17 +28,43 @@
       1px 1px 0 #000;
 }
 .pos {
+  flex-direction: column;
   font-family: 'Open Sans', sans-serif;
-  display: inline-block;
-  vertical-align: baseline;
+  display: inline;
+  /*vertical-align: baseline;*/
   text-align: center;
   margin-bottom: 10px;
 
 }
 .playerImg {
+  flex: auto;
   height: 200px;
   width: 320px;
+  /*justify-content: space-around;*/
+  /*flex-wrap: nowrap;*/
+  /*align-self: flex-start;*/
+  /*align-items: flex-start;*/
   /*float: left;*/
+}
+.coreBox1{
+  margin-left: 150px;
+  display: inline;
+  /*float: left;*/
+  flex-direction: column;
+}
+.coreBox2{
+  position: relative;
+  /*right: -50px;*/
+  left: 150px;
+  margin-top: 25px;
+  display: inline;
+  /*flex-direction: column;*/
+  float: right;
+}
+.coreBox3{
+  display: inline-block;
+  /*flex-direction: column;*/
+  /*float: right;*/
 }
 .topper{
   margin-bottom: 0px;
@@ -77,12 +110,14 @@
   margin-right: auto;
 }
 .coreP {
-  display: block;
+  /*justify-content: space-around;*/
+  display: flex;
   width: 70%;
-  background-color: grey;
+  /*background-color: grey;*/
   color: black;
   align-content: left;
   text-align: center;
+  margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
 }
